Fix extra margins on nested .form-groups (collections / compounds)

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_layout.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_layout.scss
@@ -28,3 +28,9 @@
   margin-right: 0;
   margin-left: 0;
 }
+.form-group .form-group:last-child {
+  margin-bottom: 0;
+}
+.collectionItem {
+  margin-bottom: 20px;
+}
